Temporary fix for overflow-x

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -52,11 +52,5 @@ $breakpoints: (
 * {
   margin: 0;
   padding: 0;
-}
-body {
   box-sizing: border-box;
-}
-html, body {
-  overflow-x: hidden;
-  min-width: 100%;
 }
